fixed header spacing

--- a/3 Day/3.1/css/style.css
+++ b/3 Day/3.1/css/style.css
@@ -384,8 +384,8 @@ html body .ui-group-theme-a a:visited {
 }
 
 #header h1 {
-	margin-top: 100px;
-	line-height: 32px;
+	margin-top: 80px;
+	line-height: 42px;
 }
 
 .single #header h1 ,
